Update footer content to Italian and adjust headings for consistency

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -7,8 +7,8 @@
                     <strong>Master in big data analytics & ai for society</strong>
                 </p>
                 <hr>
-                <p style="font-size: smaller">The Master in Big Data and Artificial Intelligence for Society of the University of Pisa is an annual course to become data scientists.
-Designed for graduates of all disciplines, it provides the tools to work in the area of data analysis applied to all fields, from business to research.</p>
+                <p style="font-size: smaller">Il Master in Big Data e Intelligenza Artificiale per la Società dell'Università di Pisa è un corso annuale per diventare data scientist.
+Pensato per laureati di tutte le discipline, fornisce gli strumenti per lavorare nell'ambito dell'analisi dei dati applicata a tutti i settori, dal business alla ricerca.</p>
                 <hr>
 
             </div>
@@ -32,7 +32,7 @@ Designed for graduates of all disciplines, it provides the tools to work in the 
             </div>
             <div class="col-md-3">
                 <p style="padding-left: 1.2rem">
-                    <strong>Teachers</strong>
+                    <strong>Docenti</strong>
                 </p>
                 {% if site.data.members %}
                 <ol>
@@ -49,7 +49,7 @@ Designed for graduates of all disciplines, it provides the tools to work in the 
                 {%- endif -%}
 
                 <p style="padding-left: 1.2rem">
-                    <strong>Tutors</strong>
+                    <strong>Tutor</strong>
                 </p>
                 {% if site.data.members %}
                 <ol>
