Update loading message to Italian in plotly-graph.html

--- a/docs/_includes/plotly-graph.html
+++ b/docs/_includes/plotly-graph.html
@@ -2,7 +2,7 @@
      class="plotly-graph-container {{ include.class }}"
      style="width: {{ include.width | default: '100%' }}; height: {{ include.height | default: '500px' }}">
     <div class="loading-spinner" style="text-align: center; padding: 50px;">
-        <p>Loading graph...</p>
+        <p>Caricamento grafico...</p>
     </div>
 </div>
 
